# datasette-dashboards

./: .flake8  .gitignore  CHANGELOG.md  Pipfile  README.md  bundle_js.sh  mypy.ini  package-lock.json  package.json  pyproject.toml  renovate.json  setup.py  tasks.py
.github/workflows/: ci-cd.yml  cleanup.yml  demo.yml  js-update.yml  publish.yml  shots.yml  test.yml
datasette_dashboards/: __init__.py  chart_types.py
datasette_dashboards/static/: dashboards.css  dashboards.js  vega-embed.min.js  vega-lite.min.js  vega.min.js
datasette_dashboards/templates/: dashboard_chart.html  dashboard_list.html  dashboard_view.html  dashboards.html
datasette_dashboards/templates/pages/: dashboards.html
datasette_dashboards/templates/pages/dashboards/: {slug}.html
demo/: jobs.db  metadata.yml  vercel.json
demo/templates/pages/: embedded_chart.html  embedded_dashboard.html
example/: jobs.db  metadata.yml
tests/: conftest.py  test_chart_types.py  test_charts.py  test_dashboard_chart.py  test_dashboard_chart_embed.py  test_dashboard_embed.py  test_dashboard_list.py  test_dashboard_view.py  test_dashboards.py  test_markdown_settings.py  test_plugin.py
