[tool.poetry]
name = "datasette-dashboards"
version = "0.7.1"
description = "Datasette plugin providing data dashboards from metadata"
repository = "https://github.com/rclement/datasette-dashboards"
authors = ["Romain Clement"]
license = "Apache License, Version 2.0"
readme = "README.md"
packages = [{include = "datasette_dashboards"}]

[tool.poetry.urls]
"Changelog" = "https://github.com/rclement/datasette-dashboards/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
datasette = "*"
datasette-leaflet = "*"
datasette-render-markdown = "*"

[tool.poetry.group.dev.dependencies]
black = "==25.1.0"
datasette-block-robots = "==1.1"
datasette-cluster-map = "==0.18.2"
datasette-publish-vercel = "==0.14.2"
datasette-sqlite-http = "==0.1.1"
datasette-vega = "==0.6.2"
faker = "==37.0.0"
flake8 = "==7.1.2"
mypy = "==1.15.0"
pytest = "==8.3.5"
pytest-asyncio = "==0.25.3"
pytest-cov = "==6.0.0"
sqlite-utils = "==3.38"

[tool.poetry.plugins."datasette"]
"dashboards" = "datasette_dashboards"

[tool.mypy]
show_error_codes = "True"
pretty = "True"
follow_imports = "silent"
strict_optional = "True"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "True"
disallow_untyped_defs = "True"

[[tool.mypy.overrides]]
module = "datasette_dashboards"
disallow_untyped_decorators = "False"

[[tool.mypy.overrides]]
module = "datasette.*"
ignore_missing_imports = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
