[project]
name = "datasette-dashboards"
description = "Datasette plugin to create interactive data dashboards"
version = "0.8.0"
authors = [
    { name = "Romain Clement", email = "git@romain-clement.net" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "datasette",
    "datasette-leaflet",
    "datasette-render-markdown",
]
keywords = ["datasette", "dashboards", "visualization", "vega"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Datasette",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/rclement/datasette-dashboards"
Issues = "https://github.com/rclement/datasette-dashboards/issues"
Changelog = "https://github.com/rclement/datasette-dashboards/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "datasette-block-robots==1.1",
    "datasette-cluster-map==0.18.2",
    "datasette-publish-vercel==0.14.2",
    "datasette-sqlite-http==0.1.1",
    "datasette-vega==0.6.2",
    "faker==40.1.2",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.0",
    "sqlite-utils==3.39",
]

[project.entry-points.'datasette']
"dashboards" = "datasette_dashboards"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "datasette_dashboards",
    "pyproject.toml",
    "README.md",
]

[[tool.mypy.overrides]]
module = "datasette_dashboards"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "datasette.*"
ignore_missing_imports = true
